# python-clean-architecture-boilerplate

./: .env.example  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: main.py
src/application/: config.py
src/application/adapters/errors/: http_errors.py
src/application/adapters/web/fastapi/: __init__.py  endpoints.py  exceptions.py
src/application/adapters/web/fastapi/utils/: logging.py
src/application/controllers/: __init__.py
src/application/usecases/: common.py
tests/: conftest.py  test_main.py
