[tool.poetry]
name = "python_clean_architecture_boilerplate"
version = "0.1.0"
description = ""
authors = ["Fabio Gallotti <fabio.gallotti.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
mangum = "^0.11.0"
pydantic = "^1.8.2"
pre-commit = {version = "^2.12.1", optional = true}
python-dotenv = {version = "^0.17.1", optional = true}
uvicorn = {version = "^0.13.4", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
requests = "^2.25.1"

[tool.poetry.extras]
# local extras are used only on the local machine
local = ["pre-commit", "python-dotenv", "uvicorn"]

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["integration", "slow"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
