[tool.poetry]
name = "python-clean-architecture-boilerplate"
version = "0.1.0"
description = ""
authors = ["Fabio Gallotti <fabio.gallotti.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
mangum = "^0.15.0"
pydantic = "^1.9.1"
requests = "^2.27.1"
# extras
pre-commit = {version = "^2.19.0", optional = true}
python-dotenv = {version = "^0.20.0", optional = true}
uvicorn = {version = "^0.17.6", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-icdiff = "^0.5"
pytest-mock = "^3.7.0"

[tool.poetry.extras]
# local extras are used only on the local machine
local = ["pre-commit", "python-dotenv", "uvicorn"]

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["integration", "slow"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
